<resources>
    <string name="app_name">BBIT3Aproject</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up">SIGN UP</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_login">LOGIN</string>

    <string name="txt_firstname">First Name</string>
    <string name="txt_lastname">Last Name</string>
    <string name="txt_password"> Password</string>
    <string name="txt_email">Email Address</string>
    <string name="txt_telephone">Telephone Number</string>
    <string name="txt_address">Addresses</string>
    <string name="txt_username">username</string>

    <string name="greetings">WELCOME TO GANY TELECOM</string>
    <string name="ifnothansignup">if you don"'"t have an account please sign up</string>
</resources>
