<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@color/material_pink_50">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_login"
        android:textAlignment="center"
        android:layout_margin="@dimen/quinze"
        android:textSize="@dimen/vingt_cinq"
        android:padding="@dimen/dix_neuf"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_username"
        android:id="@+id/username"
        android:background="@color/material_green_100"
        android:layout_margin="@dimen/dix_sept"
        android:padding="@dimen/dix"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_password"
        android:id="@+id/mypassword"
        android:layout_margin="@dimen/fab_margin"
        android:background="@color/material_green_100"
        android:padding="@dimen/dix"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_login"
        android:id="@+id/btn1"
        android:layout_gravity="center"
        android:background="@color/material_blue_A100"
        android:layout_margin="@dimen/fab_margin"/>

    <android.support.v7.widget.AppCompatTextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/ifnothansignup"
        android:layout_gravity="center"
        android:textSize="@dimen/dix_neuf"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SIGN UP"
        android:id="@+id/btn2"
        android:layout_gravity="center"
        android:background="@color/material_blue_A100"
        android:layout_margin="@dimen/fab_margin"/>



    </LinearLayout>
